fixed google drive picker z-index

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -281,3 +281,11 @@ body.fm-overlay-backdrop-enable {
 .input-group > input.form-control {
   min-width: 3em !important;
 }
+
+.picker-dialog-bg {
+  z-index: 10000 !important;
+}
+
+.picker-dialog {
+  z-index: 10001 !important;
+}
